--- a/responsive.html
+++ b/responsive.html
@@ -13,13 +13,13 @@
 <div class="container" id="responsive">	
 	<div class="row">
 		<div class="col-md-6 text-center col-xs-offset-3">
-			<h1>
+			<div class="first">
 				Simple pricing for everyone.
-			</h1>
+			</div>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-6 text-center col-xs-offset-3">
+		<div class="col-md-8 text-center col-xs-offset-2">
 			<h3>
 				MyID makes it simple to manage multiple profiles under a single account.MyID 
 			</h3>
@@ -28,7 +28,7 @@
 
 	<div class="row">
 		<div class="col-md-6 text-center col-xs-offset-3">
-			<h3>
+			<h3 class="goup">
 				Profiles are free for life with the option to add Plus features.
 			</h3>
 		</div>
@@ -192,7 +192,7 @@
     
 
 	<div class="row">
-		<div class="col-md-10 text-center col-xs-offset-1">
+		<div class="col-md-12 text-center">
 			<h1 class="third">
 				What you get with MyID Plus
 			</h1>
